2018-08-24  Antti Koivisto  <antti@apple.com>

        Allow creating WeakPtrs to const objects
        https://bugs.webkit.org/show_bug.cgi?id=188785

        Reviewed by Geoff Garen.

        const Foo foo;
        WeakPtr<const Foo> weakConstFoo = makeWeakPtr(foo);

        * wtf/WeakPtr.h:
        (WTF::WeakPtrFactory::createWeakPtr const):

        Add a separate factory function for const T.
        The underlying WeakReference is kept non-const in all cases.

2018-08-23  David Fenton  <david_fenton@apple.com>

        Unreviewed, rolling out r235129.

        broke internal builds

        Reverted changeset:

        "Allow creating WeakPtrs to const objects"
        https://bugs.webkit.org/show_bug.cgi?id=188785
        https://trac.webkit.org/changeset/235129

2018-08-23  Don Olmstead  <don.olmstead@sony.com>

        [CMake] Add HAVE_MALLOC_TRIM definition
        https://bugs.webkit.org/show_bug.cgi?id=188897

        Reviewed by Konstantin Tokarev.

        Use HAVE(MALLOC_TRIM) check instead of __GLIBC__.

        * wtf/linux/MemoryPressureHandlerLinux.cpp:
        (WTF::MemoryPressureHandler::platformReleaseMemory):

2018-08-23  Don Olmstead  <don.olmstead@sony.com>

        [WTF] Add generic implementation for Memory querying
        https://bugs.webkit.org/show_bug.cgi?id=188867
        <rdar://problem/43630726>

        Unreviewed build fix.

        Adding MemoryPressureHandler::memoryMeasurementTimerFired was done
        prematurely.

        * wtf/generic/MemoryPressureHandlerGeneric.cpp:
        (WTF::MemoryPressureHandler::memoryMeasurementTimerFired): Deleted.

2018-08-22  Don Olmstead  <don.olmstead@sony.com>

        [WTF] Add generic implementation for Memory querying
        https://bugs.webkit.org/show_bug.cgi?id=188867

        Reviewed by Fujii Hironori.

        Moves generic implementation of MemoryPressureHandler from
        MemoryPressureHandler.cpp into MemoryPressureHandlerGeneric